<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/play_field"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="212dp"
        android:background="@drawable/play_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/start_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play"
        android:text="@string/start_text"
        android:textAlignment="center"
        android:textColor="#000"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/cat"
        app:layout_constraintLeft_toLeftOf="@id/play_field"
        app:layout_constraintRight_toRightOf="@id/play_field"
        app:layout_constraintTop_toTopOf="@id/play_field" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/pause_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play"
        android:text="@string/pause_text"
        android:textAlignment="center"
        android:textColor="#000"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/cat"
        app:layout_constraintLeft_toLeftOf="@id/play_field"
        app:layout_constraintRight_toRightOf="@id/play_field"
        app:layout_constraintTop_toTopOf="@id/play_field" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/end_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play"
        android:text="@string/end_text"
        android:textAlignment="center"
        android:textColor="#000"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/cat"
        app:layout_constraintLeft_toLeftOf="@id/play_field"
        app:layout_constraintRight_toRightOf="@id/play_field"
        app:layout_constraintTop_toTopOf="@id/play_field"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/cat"
        android:layout_width="226dp"
        android:layout_height="156dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/cat"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/play_field"
        app:layout_constraintLeft_toLeftOf="@id/play_field"
        app:layout_constraintRight_toRightOf="@id/play_field" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/record_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play"
        android:text="@string/record"
        android:textColor="@color/colorText"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/play_field"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/play_field" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/record_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play"
        android:text="0"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/play_field"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/record_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lines_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/play"
        android:text="@string/lines"
        android:textColor="@color/colorText"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/play_field"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/record_data" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lines_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play"
        android:text="0"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/play_field"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lines_text" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/left_button"
        android:layout_width="36dp"
        android:layout_height="51dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/left_button_background"
        app:layout_constraintLeft_toLeftOf="@id/play_field"
        app:layout_constraintTop_toBottomOf="@id/play_field" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/down_button"
        android:layout_width="35dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/down_button_background"
        app:layout_constraintLeft_toRightOf="@id/left_button"
        app:layout_constraintTop_toBottomOf="@id/left_button" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/right_button"
        android:layout_width="43dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/right_button_background"
        app:layout_constraintBottom_toTopOf="@id/down_button"
        app:layout_constraintLeft_toRightOf="@id/down_button" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/rotation_button"
        android:layout_width="64dp"
        android:layout_height="76dp"
        android:background="@drawable/rotation_button_background"
        app:layout_constraintRight_toRightOf="@id/play_field"
        app:layout_constraintTop_toTopOf="@id/left_button" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/replay_button"
        android:layout_width="83dp"
        android:layout_height="38dp"
        android:background="@drawable/replay_button_background"
        android:rotation="-20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@id/play_field"
        app:layout_constraintTop_toBottomOf="@id/rotation_button" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/play_button"
        android:layout_width="83dp"
        android:layout_height="38dp"
        android:background="@drawable/play_button_background"
        android:rotation="-20"
        app:layout_constraintRight_toLeftOf="@id/replay_button"
        app:layout_constraintTop_toTopOf="@id/replay_button" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/pause_button"
        android:layout_width="83dp"
        android:layout_height="38dp"
        android:background="@drawable/pause_button_background"
        android:clickable="false"
        android:rotation="-20"
        android:visibility="invisible"
        app:layout_constraintRight_toLeftOf="@id/replay_button"
        app:layout_constraintTop_toTopOf="@id/replay_button" />

</androidx.constraintlayout.widget.ConstraintLayout>